--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,1 @@
-Simple-Persistence-Toggle/Persistence Toggle Udon Graph Script.asset linguist-detectable=false
+"Simple-Persistence-Toggle/Persistence Toggle Udon Graph Script.asset" linguist-detectable=false
